Correct display of Welcome View story tab on mobile landscape display.

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -81,7 +81,8 @@
   }
 
   .main-page-image{
-    height: 332px;
+    height: auto;
+    padding-bottom: 36px;
   }
 }
 
